# Reado

./: commanda.txt
backend/: .env.example  commanda.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4548a5cbe906_initial_migration_with_uuid_users.py  8969d0423036_initial_migration.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: config.py  redis_client.py  security.py
backend/app/models/: __init__.py  reading_session.py  user.py
backend/app/schemas/: token.py  user.py
mobile/: app.json  package-lock.json  package.json
mobile/src/context/: AuthContext.tsx
mobile/src/navigation/: AppNavigator.tsx  AuthNavigator.tsx  MainTabNavigator.tsx
mobile/src/screens/: ForgotPasswordScreen.tsx  HomeScreen.tsx  LibraryScreen.tsx  LoginScreen.tsx  ProfileScreen.tsx  ResetPasswordScreen.tsx  SignInScreen.tsx  SignupScreen.tsx  SplashScreen.tsx
mobile/src/services/: api.ts
